# UndoRedoFeature

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conan_provider.cmake  run_build.cmd  run_build.sh
.github/workflows/: CodeQL-Analysis-action.yml  Linux-action.yml  README.md  UndoRedo-Actions-multi-platform.yml  Windows-action.yml  cmake-single-platform.yml  undoredo-action-single-platform.yml  windows-VS-msbuild.yml
include/: UndoRedoCommandManager.h  UndoRedoInterface.h  UndoRedoState.h  UndoRedoString.h  api.h
source/: UndoRedoCommandManager.cpp  UndoRedoString.cpp  main.cpp
src/: CMakeLists.txt  UndoRedo-gtests.cpp  UndoRedoCommandManager.cpp  UndoRedoCommandManager.h  UndoRedoInterface.h  UndoRedoState.h  UndoRedoString.h
tests/: CMakeLists.txt  UndoRedo-gtests.cpp
vs2022/: UndoRedoFeature.sln  UndoRedoFeature.vcxproj  UndoRedoFeature.vcxproj.filters
